--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,25 @@ table td {
 	padding: 10px;
 }
 
+table td {
+	text-transform: uppercase;
+	font-size: 11px;
+}
+
 table td.pass {
-	background-color : #A0BD2C; 
+	background-color : #A0BD2C;
+	font-weight: bold;
+	color: #FFF;
+	text-align: center;
+	text-shadow: 1px 1px 1px #000;
+	font-size: 10px;
+}
+
+table td.fail {
+	background: #EB3931;
+	color: white;
+	text-align: center;
+	font-weight: bold;
+	text-shadow: 1px 1px 1px #000;
+	font-size: 10px;
 }
