--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,12 +4,59 @@ body {
 	font-family: Helvetica, Arial;
 }
 
-h1 {
-	font-size: 14px;
+#topbar{
+	position: fixed;
+	height: 40px;
+	background-color: #222;
+	opacity: 0.8;
+	overflow: hidden;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	color: #FFF;
+}
+
+#topbar h1 {
+	margin: 5px 10px 0px 20px;
+	font-size: 25px;
+	float: left;
+}
+
+#topbar .run-all {
+	display: block;
+	background-color: white;
+	color: black;
+	width: 200px;
+	margin: 10px 10px 0px 10px;
+	font-size: 13px;
+	font-weight: bold;
+	line-height: 21px;
+	padding: 0px;
+	float: right;
+	text-align: center;
+}
+
+#topbar .run-all a{
+	color: black;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
+#topbar .run-all:hover, #content .scenario h2 .run:hover {
+	background-color: #A0BD2C;
+}
+
+#topbar .run-all:hover a, #content .scenario h2 .run:hover a {
+	text-shadow: 1px 1px 1px #000;
+	color: #FFF;
+}
+
+div.results-list{
+	margin-top: 60px;
 }
 
 table {
-	border: 2px solid #333;
+	border: 2px solid #999;
 }
 
 table td {
@@ -38,4 +85,41 @@ table td.fail {
 	font-weight: bold;
 	text-shadow: 1px 1px 1px #000;
 	font-size: 10px;
+}
+
+#content .scenario {
+	background-color: #ddd;
+	padding: 10px;
+	margin-top: 30px;
+	border-radius: 5px;
+}
+
+#content .scenario h2{
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
+#content .scenario h2 .name{
+	text-shadow: 1px 1px 1px #FFF;
+	font-size: 20px;
+	padding: none;
+	margin: none;
+}
+#content .scenario .description {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+#content .scenario h2 .run{
+	font-size: 13px;
+	line-height: 10px;
+	padding-left: 10px;
+	float: right;
+	padding: 7px;
+	background-color: #eee;
+}
+
+#content .scenario h2 .run a{
+	text-decoration: none;
+	color: #333;
 }
